[package]
name = "base"
version = "0.1.0"
edition = "2021"

    
[dependencies]
anyhow = {version = "1.0", optional = true}
config_rs = {version = "0.13", package = "config", optional = true}
serde = {version = "1.0", features = ["derive"], optional = true }
strum = {version = "0.24", features = ["derive"], optional = true }
dotenv = {version = "0.15.0", optional = true }

[features]
config = ["config_rs", "serde", "anyhow","strum", "dotenv"]

[dev-dependencies]
base= { path = ".", features = ["config"] }
